--- a/index.tex
+++ b/index.tex
@@ -287,7 +287,7 @@
 Bem-vindo ao livro \textbf{``Confiabilidade e Manutenção: Princípios e
 Prática''}!
 
-\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-note-color-frame, opacityback=0, colback=white, arc=.35mm, toprule=.15mm, breakable, left=2mm, rightrule=.15mm, bottomrule=.15mm, leftrule=.75mm]
+\begin{tcolorbox}[enhanced jigsaw, left=2mm, arc=.35mm, opacityback=0, breakable, leftrule=.75mm, bottomrule=.15mm, toprule=.15mm, rightrule=.15mm, colback=white, colframe=quarto-callout-note-color-frame]
 \begin{minipage}[t]{5.5mm}
 \textcolor{quarto-callout-note-color}{\faInfo}
 \end{minipage}%
@@ -424,7 +424,7 @@ Veja instruções completas em \href{setup.qmd}{Instalação e Ambiente}.
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
-\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacityback=0, colbacktitle=quarto-callout-tip-color!10!white, arc=.35mm, toprule=.15mm, breakable, coltitle=black, opacitybacktitle=0.6, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Pronto para começar?}, colback=white, bottomtitle=1mm, bottomrule=.15mm, left=2mm, toptitle=1mm, titlerule=0mm, rightrule=.15mm, leftrule=.75mm]
+\begin{tcolorbox}[enhanced jigsaw, toptitle=1mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Pronto para começar?}, breakable, leftrule=.75mm, bottomtitle=1mm, toprule=.15mm, colback=white, coltitle=black, arc=.35mm, opacityback=0, colbacktitle=quarto-callout-tip-color!10!white, titlerule=0mm, opacitybacktitle=0.6, bottomrule=.15mm, rightrule=.15mm, left=2mm, colframe=quarto-callout-tip-color-frame]
 
 Inicie pelo \href{preface.qmd}{Prefácio} para entender melhor o contexto
 e objetivos deste livro, ou vá direto para \href{requirements.qmd}{Como
@@ -1479,7 +1479,7 @@ níveis a soma das categorias representam as \textbf{horas calendário}
 HC = HT + HM + HO
 \]
 
-\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-note-color-frame, opacityback=0, colbacktitle=quarto-callout-note-color!10!white, arc=.35mm, toprule=.15mm, breakable, coltitle=black, opacitybacktitle=0.6, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Legenda das Categorias de Horas}, colback=white, bottomtitle=1mm, bottomrule=.15mm, left=2mm, toptitle=1mm, titlerule=0mm, rightrule=.15mm, leftrule=.75mm]
+\begin{tcolorbox}[enhanced jigsaw, toptitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Legenda das Categorias de Horas}, breakable, leftrule=.75mm, bottomtitle=1mm, toprule=.15mm, colback=white, coltitle=black, arc=.35mm, opacityback=0, colbacktitle=quarto-callout-note-color!10!white, titlerule=0mm, opacitybacktitle=0.6, bottomrule=.15mm, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame]
 
 \begin{itemize}
 \tightlist
@@ -1756,7 +1756,7 @@ Perda por PR & (240.1 - 232.8) × 583 & 4292\\
 
 Exemplo de cálculo de ICDs e perda de produção
 
-\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-important-color-frame, opacityback=0, colbacktitle=quarto-callout-important-color!10!white, arc=.35mm, toprule=.15mm, breakable, coltitle=black, opacitybacktitle=0.6, title=\textcolor{quarto-callout-important-color}{\faExclamation}\hspace{0.5em}{Interpretação das Perdas}, colback=white, bottomtitle=1mm, bottomrule=.15mm, left=2mm, toptitle=1mm, titlerule=0mm, rightrule=.15mm, leftrule=.75mm]
+\begin{tcolorbox}[enhanced jigsaw, toptitle=1mm, title=\textcolor{quarto-callout-important-color}{\faExclamation}\hspace{0.5em}{Interpretação das Perdas}, breakable, leftrule=.75mm, bottomtitle=1mm, toprule=.15mm, colback=white, coltitle=black, arc=.35mm, opacityback=0, colbacktitle=quarto-callout-important-color!10!white, titlerule=0mm, opacitybacktitle=0.6, bottomrule=.15mm, rightrule=.15mm, left=2mm, colframe=quarto-callout-important-color-frame]
 
 A análise de perda de produção permite identificar qual indicador teve
 maior impacto negativo na produção realizada, direcionando as ações de
@@ -2080,7 +2080,7 @@ manutenção.
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
-\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacityback=0, colbacktitle=quarto-callout-tip-color!10!white, arc=.35mm, toprule=.15mm, breakable, coltitle=black, opacitybacktitle=0.6, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Continue Aprendendo}, colback=white, bottomtitle=1mm, bottomrule=.15mm, left=2mm, toptitle=1mm, titlerule=0mm, rightrule=.15mm, leftrule=.75mm]
+\begin{tcolorbox}[enhanced jigsaw, toptitle=1mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Continue Aprendendo}, breakable, leftrule=.75mm, bottomtitle=1mm, toprule=.15mm, colback=white, coltitle=black, arc=.35mm, opacityback=0, colbacktitle=quarto-callout-tip-color!10!white, titlerule=0mm, opacitybacktitle=0.6, bottomrule=.15mm, rightrule=.15mm, left=2mm, colframe=quarto-callout-tip-color-frame]
 
 A análise de confiabilidade é uma área em constante evolução.
 Mantenha-se atualizado, pratique regularmente e compartilhe seu
