--- a/index.tex
+++ b/index.tex
@@ -287,7 +287,7 @@
 Bem-vindo ao livro \textbf{``Confiabilidade e Manutenção: Princípios e
 Prática''}!
 
-\begin{tcolorbox}[enhanced jigsaw, colback=white, arc=.35mm, rightrule=.15mm, breakable, leftrule=.75mm, colframe=quarto-callout-note-color-frame, bottomrule=.15mm, toprule=.15mm, opacityback=0, left=2mm]
+\begin{tcolorbox}[enhanced jigsaw, opacityback=0, left=2mm, breakable, colframe=quarto-callout-note-color-frame, bottomrule=.15mm, rightrule=.15mm, arc=.35mm, toprule=.15mm, leftrule=.75mm, colback=white]
 \begin{minipage}[t]{5.5mm}
 \textcolor{quarto-callout-note-color}{\faInfo}
 \end{minipage}%
@@ -424,7 +424,7 @@ Veja instruções completas em \href{setup.qmd}{Instalação e Ambiente}.
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
-\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Pronto para começar?}, bottomtitle=1mm, toptitle=1mm, titlerule=0mm, colbacktitle=quarto-callout-tip-color!10!white, opacityback=0, left=2mm, colback=white, coltitle=black, opacitybacktitle=0.6, arc=.35mm, breakable, leftrule=.75mm, colframe=quarto-callout-tip-color-frame, toprule=.15mm, rightrule=.15mm, bottomrule=.15mm]
+\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, left=2mm, breakable, toptitle=1mm, colframe=quarto-callout-tip-color-frame, arc=.35mm, colbacktitle=quarto-callout-tip-color!10!white, opacityback=0, opacitybacktitle=0.6, bottomrule=.15mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Pronto para começar?}, coltitle=black, rightrule=.15mm, titlerule=0mm, bottomtitle=1mm, toprule=.15mm, colback=white]
 
 Inicie pelo \href{preface.qmd}{Prefácio} para entender melhor o contexto
 e objetivos deste livro, ou vá direto para \href{requirements.qmd}{Como
@@ -1479,7 +1479,7 @@ níveis a soma das categorias representam as \textbf{horas calendário}
 HC = HT + HM + HO
 \]
 
-\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Legenda das Categorias de Horas}, bottomtitle=1mm, toptitle=1mm, titlerule=0mm, colbacktitle=quarto-callout-note-color!10!white, opacityback=0, left=2mm, colback=white, coltitle=black, opacitybacktitle=0.6, arc=.35mm, breakable, leftrule=.75mm, colframe=quarto-callout-note-color-frame, toprule=.15mm, rightrule=.15mm, bottomrule=.15mm]
+\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, left=2mm, breakable, toptitle=1mm, colframe=quarto-callout-note-color-frame, arc=.35mm, colbacktitle=quarto-callout-note-color!10!white, opacityback=0, opacitybacktitle=0.6, bottomrule=.15mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Legenda das Categorias de Horas}, coltitle=black, rightrule=.15mm, titlerule=0mm, bottomtitle=1mm, toprule=.15mm, colback=white]
 
 \begin{itemize}
 \tightlist
@@ -1756,7 +1756,7 @@ Perda por PR & (240.1 - 232.8) × 583 & 4292\\
 
 Exemplo de cálculo de ICDs e perda de produção
 
-\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-important-color}{\faExclamation}\hspace{0.5em}{Interpretação das Perdas}, bottomtitle=1mm, toptitle=1mm, titlerule=0mm, colbacktitle=quarto-callout-important-color!10!white, opacityback=0, left=2mm, colback=white, coltitle=black, opacitybacktitle=0.6, arc=.35mm, breakable, leftrule=.75mm, colframe=quarto-callout-important-color-frame, toprule=.15mm, rightrule=.15mm, bottomrule=.15mm]
+\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, left=2mm, breakable, toptitle=1mm, colframe=quarto-callout-important-color-frame, arc=.35mm, colbacktitle=quarto-callout-important-color!10!white, opacityback=0, opacitybacktitle=0.6, bottomrule=.15mm, title=\textcolor{quarto-callout-important-color}{\faExclamation}\hspace{0.5em}{Interpretação das Perdas}, coltitle=black, rightrule=.15mm, titlerule=0mm, bottomtitle=1mm, toprule=.15mm, colback=white]
 
 A análise de perda de produção permite identificar qual indicador teve
 maior impacto negativo na produção realizada, direcionando as ações de
@@ -2080,7 +2080,7 @@ manutenção.
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
-\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Continue Aprendendo}, bottomtitle=1mm, toptitle=1mm, titlerule=0mm, colbacktitle=quarto-callout-tip-color!10!white, opacityback=0, left=2mm, colback=white, coltitle=black, opacitybacktitle=0.6, arc=.35mm, breakable, leftrule=.75mm, colframe=quarto-callout-tip-color-frame, toprule=.15mm, rightrule=.15mm, bottomrule=.15mm]
+\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, left=2mm, breakable, toptitle=1mm, colframe=quarto-callout-tip-color-frame, arc=.35mm, colbacktitle=quarto-callout-tip-color!10!white, opacityback=0, opacitybacktitle=0.6, bottomrule=.15mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Continue Aprendendo}, coltitle=black, rightrule=.15mm, titlerule=0mm, bottomtitle=1mm, toprule=.15mm, colback=white]
 
 A análise de confiabilidade é uma área em constante evolução.
 Mantenha-se atualizado, pratique regularmente e compartilhe seu
