--- a/index.tex
+++ b/index.tex
@@ -247,14 +247,14 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={Confiabilidade e Manutenção},
+  pdftitle={Manutenção e Confiabilidade: Aplicação em R},
   pdfauthor={Rafael da Silva Fernandes},
   pdflang={pt-BR},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 
 
-\title{Confiabilidade e Manutenção}
+\title{Manutenção e Confiabilidade: Aplicação em R}
 \usepackage{etoolbox}
 \makeatletter
 \providecommand{\subtitle}[1]{% add subtitle to \maketitle
@@ -287,7 +287,7 @@
 Bem-vindo ao livro \textbf{``Confiabilidade e Manutenção: Princípios e
 Prática''}!
 
-\begin{tcolorbox}[enhanced jigsaw, opacityback=0, left=2mm, breakable, colframe=quarto-callout-note-color-frame, bottomrule=.15mm, rightrule=.15mm, arc=.35mm, toprule=.15mm, leftrule=.75mm, colback=white]
+\begin{tcolorbox}[enhanced jigsaw, colback=white, arc=.35mm, bottomrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, rightrule=.15mm, breakable, opacityback=0, toprule=.15mm, leftrule=.75mm]
 \begin{minipage}[t]{5.5mm}
 \textcolor{quarto-callout-note-color}{\faInfo}
 \end{minipage}%
@@ -424,7 +424,7 @@ Veja instruções completas em \href{setup.qmd}{Instalação e Ambiente}.
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
-\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, left=2mm, breakable, toptitle=1mm, colframe=quarto-callout-tip-color-frame, arc=.35mm, colbacktitle=quarto-callout-tip-color!10!white, opacityback=0, opacitybacktitle=0.6, bottomrule=.15mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Pronto para começar?}, coltitle=black, rightrule=.15mm, titlerule=0mm, bottomtitle=1mm, toprule=.15mm, colback=white]
+\begin{tcolorbox}[enhanced jigsaw, colback=white, titlerule=0mm, toptitle=1mm, colframe=quarto-callout-tip-color-frame, rightrule=.15mm, opacityback=0, coltitle=black, toprule=.15mm, leftrule=.75mm, arc=.35mm, bottomrule=.15mm, left=2mm, breakable, opacitybacktitle=0.6, bottomtitle=1mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Pronto para começar?}, colbacktitle=quarto-callout-tip-color!10!white]
 
 Inicie pelo \href{preface.qmd}{Prefácio} para entender melhor o contexto
 e objetivos deste livro, ou vá direto para \href{requirements.qmd}{Como
@@ -1479,7 +1479,7 @@ níveis a soma das categorias representam as \textbf{horas calendário}
 HC = HT + HM + HO
 \]
 
-\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, left=2mm, breakable, toptitle=1mm, colframe=quarto-callout-note-color-frame, arc=.35mm, colbacktitle=quarto-callout-note-color!10!white, opacityback=0, opacitybacktitle=0.6, bottomrule=.15mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Legenda das Categorias de Horas}, coltitle=black, rightrule=.15mm, titlerule=0mm, bottomtitle=1mm, toprule=.15mm, colback=white]
+\begin{tcolorbox}[enhanced jigsaw, colback=white, titlerule=0mm, toptitle=1mm, colframe=quarto-callout-note-color-frame, rightrule=.15mm, opacityback=0, coltitle=black, toprule=.15mm, leftrule=.75mm, arc=.35mm, bottomrule=.15mm, left=2mm, breakable, opacitybacktitle=0.6, bottomtitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Legenda das Categorias de Horas}, colbacktitle=quarto-callout-note-color!10!white]
 
 \begin{itemize}
 \tightlist
@@ -1756,7 +1756,7 @@ Perda por PR & (240.1 - 232.8) × 583 & 4292\\
 
 Exemplo de cálculo de ICDs e perda de produção
 
-\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, left=2mm, breakable, toptitle=1mm, colframe=quarto-callout-important-color-frame, arc=.35mm, colbacktitle=quarto-callout-important-color!10!white, opacityback=0, opacitybacktitle=0.6, bottomrule=.15mm, title=\textcolor{quarto-callout-important-color}{\faExclamation}\hspace{0.5em}{Interpretação das Perdas}, coltitle=black, rightrule=.15mm, titlerule=0mm, bottomtitle=1mm, toprule=.15mm, colback=white]
+\begin{tcolorbox}[enhanced jigsaw, colback=white, titlerule=0mm, toptitle=1mm, colframe=quarto-callout-important-color-frame, rightrule=.15mm, opacityback=0, coltitle=black, toprule=.15mm, leftrule=.75mm, arc=.35mm, bottomrule=.15mm, left=2mm, breakable, opacitybacktitle=0.6, bottomtitle=1mm, title=\textcolor{quarto-callout-important-color}{\faExclamation}\hspace{0.5em}{Interpretação das Perdas}, colbacktitle=quarto-callout-important-color!10!white]
 
 A análise de perda de produção permite identificar qual indicador teve
 maior impacto negativo na produção realizada, direcionando as ações de
@@ -2080,7 +2080,7 @@ manutenção.
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
-\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, left=2mm, breakable, toptitle=1mm, colframe=quarto-callout-tip-color-frame, arc=.35mm, colbacktitle=quarto-callout-tip-color!10!white, opacityback=0, opacitybacktitle=0.6, bottomrule=.15mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Continue Aprendendo}, coltitle=black, rightrule=.15mm, titlerule=0mm, bottomtitle=1mm, toprule=.15mm, colback=white]
+\begin{tcolorbox}[enhanced jigsaw, colback=white, titlerule=0mm, toptitle=1mm, colframe=quarto-callout-tip-color-frame, rightrule=.15mm, opacityback=0, coltitle=black, toprule=.15mm, leftrule=.75mm, arc=.35mm, bottomrule=.15mm, left=2mm, breakable, opacitybacktitle=0.6, bottomtitle=1mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Continue Aprendendo}, colbacktitle=quarto-callout-tip-color!10!white]
 
 A análise de confiabilidade é uma área em constante evolução.
 Mantenha-se atualizado, pratique regularmente e compartilhe seu
