--- a/index.tex
+++ b/index.tex
@@ -158,20 +158,6 @@
 \newcommand{\CSLRightInline}[1]{\parbox[t]{\linewidth - \csllabelwidth}{\strut#1\strut}}
 \newcommand{\CSLIndent}[1]{\hspace{\cslhangindent}#1}
 
-\usepackage{booktabs}
-\usepackage{longtable}
-\usepackage{array}
-\usepackage{multirow}
-\usepackage{wrapfig}
-\usepackage{float}
-\usepackage{colortbl}
-\usepackage{pdflscape}
-\usepackage{tabu}
-\usepackage{threeparttable}
-\usepackage{threeparttablex}
-\usepackage[normalem]{ulem}
-\usepackage{makecell}
-\usepackage{xcolor}
 \makeatletter
 \@ifpackageloaded{tcolorbox}{}{\usepackage[skins,breakable]{tcolorbox}}
 \@ifpackageloaded{fontawesome5}{}{\usepackage{fontawesome5}}
@@ -287,7 +273,7 @@
 Bem-vindo ao livro \textbf{``Confiabilidade e Manutenção: Princípios e
 Prática''}!
 
-\begin{tcolorbox}[enhanced jigsaw, rightrule=.15mm, breakable, colback=white, leftrule=.75mm, arc=.35mm, toprule=.15mm, opacityback=0, bottomrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame]
+\begin{tcolorbox}[enhanced jigsaw, toprule=.15mm, opacityback=0, bottomrule=.15mm, colback=white, breakable, colframe=quarto-callout-note-color-frame, left=2mm, rightrule=.15mm, leftrule=.75mm, arc=.35mm]
 \begin{minipage}[t]{5.5mm}
 \textcolor{quarto-callout-note-color}{\faInfo}
 \end{minipage}%
@@ -424,7 +410,7 @@ Veja instruções completas em \href{setup.qmd}{Instalação e Ambiente}.
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
-\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Pronto para começar?}, colback=white, bottomtitle=1mm, opacityback=0, colframe=quarto-callout-tip-color-frame, rightrule=.15mm, breakable, titlerule=0mm, leftrule=.75mm, coltitle=black, opacitybacktitle=0.6, toptitle=1mm, toprule=.15mm, arc=.35mm, colbacktitle=quarto-callout-tip-color!10!white, left=2mm, bottomrule=.15mm]
+\begin{tcolorbox}[enhanced jigsaw, titlerule=0mm, colbacktitle=quarto-callout-tip-color!10!white, opacityback=0, opacitybacktitle=0.6, colframe=quarto-callout-tip-color-frame, coltitle=black, leftrule=.75mm, bottomrule=.15mm, colback=white, bottomtitle=1mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Pronto para começar?}, breakable, toptitle=1mm, left=2mm, toprule=.15mm, rightrule=.15mm, arc=.35mm]
 
 Inicie pelo \href{preface.qmd}{Prefácio} para entender melhor o contexto
 e objetivos deste livro, ou vá direto para \href{requirements.qmd}{Como
@@ -1419,7 +1405,7 @@ fila para bascular) e, finalmente, o basculamento (TB-- tempo de
 basculamento). Para um único turno de trabalho da operação, um
 determinado número de ciclos (NC) é realizado.
 
-\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Nota}, colback=white, bottomtitle=1mm, opacityback=0, colframe=quarto-callout-note-color-frame, rightrule=.15mm, breakable, titlerule=0mm, leftrule=.75mm, coltitle=black, opacitybacktitle=0.6, toptitle=1mm, toprule=.15mm, arc=.35mm, colbacktitle=quarto-callout-note-color!10!white, left=2mm, bottomrule=.15mm]
+\begin{tcolorbox}[enhanced jigsaw, titlerule=0mm, colbacktitle=quarto-callout-note-color!10!white, opacityback=0, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, coltitle=black, leftrule=.75mm, bottomrule=.15mm, colback=white, bottomtitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Nota}, breakable, toptitle=1mm, left=2mm, toprule=.15mm, rightrule=.15mm, arc=.35mm]
 
 O tempo total do ciclo influencia diretamente a produtividade da
 operação e é afetado por fatores como distância de transporte, condições
@@ -1609,7 +1595,7 @@ níveis a soma das categorias representam as \textbf{horas calendário}
 HC = HT + HM + HO
 \]
 
-\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Legenda das Categorias de Horas}, colback=white, bottomtitle=1mm, opacityback=0, colframe=quarto-callout-note-color-frame, rightrule=.15mm, breakable, titlerule=0mm, leftrule=.75mm, coltitle=black, opacitybacktitle=0.6, toptitle=1mm, toprule=.15mm, arc=.35mm, colbacktitle=quarto-callout-note-color!10!white, left=2mm, bottomrule=.15mm]
+\begin{tcolorbox}[enhanced jigsaw, titlerule=0mm, colbacktitle=quarto-callout-note-color!10!white, opacityback=0, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, coltitle=black, leftrule=.75mm, bottomrule=.15mm, colback=white, bottomtitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Legenda das Categorias de Horas}, breakable, toptitle=1mm, left=2mm, toprule=.15mm, rightrule=.15mm, arc=.35mm]
 
 \begin{itemize}
 \tightlist
@@ -1886,7 +1872,7 @@ Perda por PR & (240.1 - 232.8) × 583 & 4292\\
 
 Exemplo de cálculo de ICDs e perda de produção
 
-\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-important-color}{\faExclamation}\hspace{0.5em}{Interpretação das Perdas}, colback=white, bottomtitle=1mm, opacityback=0, colframe=quarto-callout-important-color-frame, rightrule=.15mm, breakable, titlerule=0mm, leftrule=.75mm, coltitle=black, opacitybacktitle=0.6, toptitle=1mm, toprule=.15mm, arc=.35mm, colbacktitle=quarto-callout-important-color!10!white, left=2mm, bottomrule=.15mm]
+\begin{tcolorbox}[enhanced jigsaw, titlerule=0mm, colbacktitle=quarto-callout-important-color!10!white, opacityback=0, opacitybacktitle=0.6, colframe=quarto-callout-important-color-frame, coltitle=black, leftrule=.75mm, bottomrule=.15mm, colback=white, bottomtitle=1mm, title=\textcolor{quarto-callout-important-color}{\faExclamation}\hspace{0.5em}{Interpretação das Perdas}, breakable, toptitle=1mm, left=2mm, toprule=.15mm, rightrule=.15mm, arc=.35mm]
 
 A análise de perda de produção permite identificar qual indicador teve
 maior impacto negativo na produção realizada, direcionando as ações de
@@ -2205,7 +2191,7 @@ manutenção.
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
-\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Continue Aprendendo}, colback=white, bottomtitle=1mm, opacityback=0, colframe=quarto-callout-tip-color-frame, rightrule=.15mm, breakable, titlerule=0mm, leftrule=.75mm, coltitle=black, opacitybacktitle=0.6, toptitle=1mm, toprule=.15mm, arc=.35mm, colbacktitle=quarto-callout-tip-color!10!white, left=2mm, bottomrule=.15mm]
+\begin{tcolorbox}[enhanced jigsaw, titlerule=0mm, colbacktitle=quarto-callout-tip-color!10!white, opacityback=0, opacitybacktitle=0.6, colframe=quarto-callout-tip-color-frame, coltitle=black, leftrule=.75mm, bottomrule=.15mm, colback=white, bottomtitle=1mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Continue Aprendendo}, breakable, toptitle=1mm, left=2mm, toprule=.15mm, rightrule=.15mm, arc=.35mm]
 
 A análise de confiabilidade é uma área em constante evolução.
 Mantenha-se atualizado, pratique regularmente e compartilhe seu
